[gin-tuto] notifysender init 및 객체->변수화로 변경
