# gin-tuto/docs/swagger.json
@@ -21,7 +21,7 @@
                 }
             }
         },
-        "/v1/grafana/mail": {
+        "/notify/grafana/mail": {
             "post": {
                 "description": "자세한 설명은 이곳에 적습니다.",
                 "consumes": [
@@ -49,7 +49,7 @@
                 }
             }
         },
-        "/v1/grafana/teams": {
+        "/notify/grafana/teams": {
             "post": {
                 "description": "자세한 설명은 이곳에 적습니다.",
                 "consumes": [
@@ -77,7 +77,7 @@
                 }
             }
         },
-        "/v1/mail": {
+        "/notify/mail": {
             "post": {
                 "description": "universal notify api for mail",
                 "consumes": [
@@ -105,7 +105,7 @@
                 }
             }
         },
-        "/v1/teams": {
+        "/notify/teams": {
             "post": {
                 "description": "universal notify api for teams",
                 "consumes": [
@@ -212,6 +212,7 @@
                         "type": "string"
                     },
                     "example": {
+                        " region": "KR",
                         "game": "#MUA2"
                     }
                 },
@@ -250,6 +251,7 @@
                         "type": "string"
                     },
                     "example": {
+                        " region": "KR",
                         "game": "#MUA2"
                     }
                 },
