# gin-tuto/server/api/grafana.go
@@ -5,7 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
-	"webzen.com/notifyhandler/control"
+	"webzen.com/notifyhandler/control/notifysender"
 	"webzen.com/notifyhandler/model"
 	"webzen.com/notifyhandler/util"
 )
@@ -20,7 +20,7 @@ type Grafana struct {
 // @Accept  json
 // @Produce  json
 // @Param  jsonbody body model.StGrafanaAlert true "json struct for send mail"
-// @Router /v1/grafana/mail [POST]
+// @Router /notify/grafana/mail [POST]
 // @Success 200
 func (p Grafana) MailHandler(c *gin.Context) {
 	var jsonGrafana model.StGrafanaAlert
@@ -34,8 +34,7 @@ func (p Grafana) MailHandler(c *gin.Context) {
 	var jsonMail model.StNotifyMail
 	util.StructPrintToJson(jsonMail)
 
-	sender := control.NewStNotifySender()
-	resp, errSended := sender.SendMail(&jsonMail)
+	resp, errSended := notifysender.SendMail(&jsonMail)
 	if errSended != nil {
 		log.Println(errSended)
 	}
@@ -52,7 +51,7 @@ func (p Grafana) MailHandler(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param  jsonbody body model.StGrafanaAlert true "json struct for send teams"
-// @Router /v1/grafana/teams [POST]
+// @Router /notify/grafana/teams [POST]
 // @Success 200
 func (p Grafana) TeamsHandler(c *gin.Context) {
 	var jsonGrafana model.StGrafanaAlert
@@ -72,8 +71,7 @@ func (p Grafana) TeamsHandler(c *gin.Context) {
 		return
 	}
 
-	sender := control.NewStNotifySender()
-	resp, errSended := sender.SendTeams(&jsonTeams)
+	resp, errSended := notifysender.SendTeams(&jsonTeams)
 	if errSended != nil {
 		log.Println(errSended)
 	}
